Further cleanup
Signed-off-by: JCWasmx86 <JCWasmx86@t-online.de>